--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "autoprefixer": "^6.7.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-register": "^6.22.0",
@@ -25,6 +24,7 @@
     "react-interpolate-component": "^0.10.0",
     "react-tools": "^0.12.0",
     "react-translate-component": "^0.13.2",
+    "redux-devtools": "^3.3.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
@@ -34,11 +34,16 @@
     "url-loader": "^0.5.7"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.9.0",
+    "babel-polyfill": "^6.22.0",
     "express": "^4.14.0",
     "install": "^0.8.4",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-router": "^3.0.2"
+    "redux-logger": "^2.0.4",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   }
 }
