--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chai": "^3.5.0",
     "counterpart": "^0.17.6",
     "css-loader": "^0.26.0",
+    "enzyme": "^2.6.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
     "jsdom": "^9.9.1",
