--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-interpolate-component": "^0.10.0",
     "react-tools": "^0.12.0",
     "react-translate-component": "^0.13.2",
+    "redux-async-connect": "^0.1.13",
     "redux-devtools": "^3.3.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
@@ -44,6 +45,7 @@
     "redux-logger": "^2.0.4",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
   }
