--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "redux-logger": "^2.0.4",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "redux-logger": "^2.0.4",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0"
   }
 }
