--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "^6.7.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-register": "^6.22.0",
@@ -28,11 +29,11 @@
     "redux-devtools": "^3.3.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-dev-server": "^1.14.0",
-    "webpack-hot-middleware": "^2.6.0",
-    "url-loader": "^0.5.7"
+    "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.22.0",
@@ -47,6 +48,7 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.0.4",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "reselect": "^3.0.1"
   }
 }
