--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["react", "es2015"], 
+  "presets": ["react", "es2015", "babel-polyfill"], 
   "plugins": ["transform-object-rest-spread"]
 }
